--- a/META.yml
+++ b/META.yml
@@ -27,8 +27,10 @@ requires:
   Capture::Tiny: 0.10
   Carp: 0
   Cwd: 0
+  DBI: 1.611
   Dancer: 1.3040
   Data::Dumper: 0
+  Encode: 2.38
   File::Basename: 0
   File::Copy: 0
   File::Copy::Recursive: 0.38
@@ -39,23 +41,29 @@ requires:
   Getopt::Long: 0
   JSON: 2.51
   JSON::XS: 2.3
-  MongoDB: 0.39
+  List::Util: 0
   Moose: 2.0006
   MooseX::StrictConstructor: 0.16
+  POSIX: 0
   PPI::Document: 0
   PPI::Find: 1.215
   PPIx::EditorTools: 0.12
   Parse::CPAN::Packages: 2.33
   Parse::CPAN::Whois: 0.02
+  Perl::Critic: 1.106
   Perl::MinimumVersion: 1.28
   Plack: 0.9978
+  Plack::Handler::FCGI: 0
   Plack::Runner: 0
+  Plack::Util: 0
   Pod::Simple: 3.16
+  Pod::Simple::HTML: 0
   Template: 2.22
+  Time::HiRes: 0
   YAML: 0.73
   YAML::Any: 0.72
   autodie: 2.10
   perl: 5.008008
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.01
+version: 0.02
