Import of SZABGAB/CPAN-Digger-0.04 from CPAN.
gitpan-cpan-distribution: CPAN-Digger
gitpan-cpan-version:      0.04
gitpan-cpan-path:         SZABGAB/CPAN-Digger-0.04.tar.gz
gitpan-cpan-author:       SZABGAB
gitpan-cpan-maturity:     released

--- a/public/critic-core.ini
+++ b/public/critic-core.ini
@@ -1,6 +1,25 @@
 # This is the Perl::Critic policy file for CPAN::Digger
 
-severity = 3
+severity = 5
+
+[BuiltinFunctions::ProhibitComplexMappings]
+severity = 5
+[RegularExpressions::RequireExtendedFormatting]
+severity = 5
+[Subroutines::ProhibitExcessComplexity]
+severity = 5
+
+
+# some extra policies that were seen in a test report:
+# http://www.cpantesters.org/cpan/report/82ac1cd0-a786-11e1-a856-bd17435ee788
+#[Bangs::ProhibitBitwiseOperators]
+#[CodeLayout::ProhibitHashBarewords]
+#[CodeLayout::RequireUseUTF8]
+#[Documentation::RequirePODUseEncodingUTF8]
+#[Modules::RequireExplicitInclusion]
+#[Subroutines::ProhibitCallsToUnexportedSubs]
+#[ValuesAndExpressions::ProhibitAccessOfPrivateData]
+#[ValuesAndExpressions::ProhibitFiletest_f]
 
 
 ######################################################################
