--- a/META.yml
+++ b/META.yml
@@ -30,6 +30,7 @@ requires:
   Capture::Tiny: 0.10
   Carp: 0
   Cwd: 0
+  DBD::SQLite: 1.35
   DBI: 1.611
   Dancer: 1.3040
   Data::Dumper: 0
@@ -70,4 +71,4 @@ requires:
   perl: 5.008008
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.03
+version: 0.04
