--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -29,6 +29,7 @@ requires:
   Capture::Tiny: 0.10
   Carp: 0
   Cwd: 0
+  DBD::SQLite: 1.35
   DBI: 1.611
   Dancer: 1.3040
   Data::Dumper: 0
@@ -69,4 +70,4 @@ requires:
   perl: 5.008008
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.02
+version: 0.03
