--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -58,8 +58,6 @@ requires:
   Perl::Critic::Bangs: 1.10
   Perl::Critic::Compatibility: 1.001
   Perl::Critic::Deprecated: 1.108
-  Perl::Critic::Dynamic: 0.05
-  Perl::Critic::Git: v1.1.2
   Perl::Critic::Itch: 0.07
   Perl::Critic::Lax: 0.009
   Perl::Critic::More: 1.000
@@ -68,7 +66,6 @@ requires:
   Perl::Critic::PetPeeves::JTRAMMELL: 0.02
   Perl::Critic::Policy::CodeLayout::ProhibitSpaceIndentation: 1.02
   Perl::Critic::Policy::CodeLayout::TabIndentSpaceAlign: v1.0.2
-  Perl::Critic::Policy::Dynamic::NoIndirect: 0.06
   Perl::Critic::Policy::logicLAB::ProhibitShellDispatch: 0.01
   Perl::Critic::Policy::logicLAB::ProhibitUseLib: 0.01
   Perl::Critic::Policy::logicLAB::RequireSheBang: 0.03
@@ -92,5 +89,7 @@ requires:
   autodie: 2.13
   perl: 5.008008
 resources:
+  homepage: http://cpandigger.com/
   license: http://dev.perl.org/licenses/
-version: 0.06
+  repository: https://github.com/szabgab/CPAN-Digger
+version: 0.07
